// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiConfirmModal renders EuiConfirmModal 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-label="aria-label"
      class="euiModal euiModal--confirmation testClass1 testClass2 emotion-euiModal-defaultMaxWidth-confirmation"
      data-test-subj="test subject string"
      tabindex="0"
    >
      <button
        aria-label="Closes this modal window"
        class="euiButtonIcon euiButtonIcon--xSmall euiModal__closeIcon emotion-euiButtonIcon-empty-text-hoverStyles-euiModal__closeIcon"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="cross"
        />
      </button>
      <div
        class="euiModalHeader emotion-euiModalHeader"
      >
        <h1
          class="euiTitle euiModalHeader__title emotion-euiTitle-m"
          data-test-subj="confirmModalTitleText"
        >
          A confirmation modal
        </h1>
      </div>
      <div
        class="euiModalBody emotion-euiModalBody"
      >
        <div
          class="euiModalBody__overflow emotion-euiModalBody__overflow"
        >
          <div
            class="euiText emotion-euiText-m"
            data-test-subj="confirmModalBodyText"
          >
            <p>
              This is a confirmation modal example
            </p>
          </div>
        </div>
      </div>
      <div
        class="euiModalFooter emotion-euiModalFooter"
      >
        <button
          class="euiButtonEmpty css-9t7nyf-empty-primary"
          data-test-subj="confirmModalCancelButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonEmpty__text"
            >
              Cancel Button Text
            </span>
          </span>
        </button>
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
          data-test-subj="confirmModalConfirmButton"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Confirm Button Text
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
]
`;

exports[`EuiConfirmModal renders EuiConfirmModal without EuiModalBody, if empty 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-label="aria-label"
      class="euiModal euiModal--confirmation testClass1 testClass2 emotion-euiModal-defaultMaxWidth-confirmation"
      data-test-subj="test subject string"
      tabindex="0"
    >
      <button
        aria-label="Closes this modal window"
        class="euiButtonIcon euiButtonIcon--xSmall euiModal__closeIcon emotion-euiButtonIcon-empty-text-hoverStyles-euiModal__closeIcon"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="cross"
        />
      </button>
      <div
        class="euiModalHeader emotion-euiModalHeader"
      >
        <h1
          class="euiTitle euiModalHeader__title emotion-euiTitle-m"
          data-test-subj="confirmModalTitleText"
        >
          A confirmation modal
        </h1>
      </div>
      <div
        class="euiModalFooter emotion-euiModalFooter"
      >
        <button
          class="euiButtonEmpty css-9t7nyf-empty-primary"
          data-test-subj="confirmModalCancelButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonEmpty__text"
            >
              Cancel Button Text
            </span>
          </span>
        </button>
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
          data-test-subj="confirmModalConfirmButton"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Confirm Button Text
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
]
`;
